--- a/m/login.html
+++ b/m/login.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <div class="weui-cells__title" style="margin: 1em auto; text-align: center; font-size: 18px; color: #000;">账户登录</div>
+    <!-- <div class="weui-cells__title" style="margin: 1em auto; text-align: center; font-size: 18px; color: #000;">账户登录</div> -->
     <form action="" method="post" id="form">
         <input type="hidden" name="pubkey" id="pubkey" value="MIGfMA0GCSqGSIb3DQEBAQUAA4GNADCBiQKBgQDL24wh6/WKW/7TkrNHiDKc0RUTIAdqWDvhlxlb4Az3n8v5hXqIsGV6b2Aol8Zn/ga7NIPz+cw2vsMh8fqQMMyc+VNAL548D4FEU/LG8MFoaRceGJFGCorEGaugUiq8L7rJXoHOUgsgnmvrFkzCSbnYe0XUG+WKfG5LSVakqr+JrwIDAQAB">
         <div class="weui-cells weui-cells_form">
@@ -56,30 +56,18 @@
     function login() {
         if (!weui.form.validate('#form')) return;
 
-        var loading = weui.loading('登录中...');
-
         var data = $('#form').serializeObject();
         data.login_pwd = encryptPassword(data.login_pwd);
 
-        $.ajax({
-            url: '/m/action/user/login',
-            type: 'POST',
-            dataType: 'json',
-            data: data,
-            error: function() {
-                console.log(arguments);
-            },
+        $$.request('/m/action/user/login', data, {
             success: function(data) {
-                console.log(arguments);
-
                 if(data.errcode == 0) {
-                    weui.toast('登录成功');
+                    weui.toast('登录成功', function () {
+                        window.history.back(-1);
+                    });
                 } else {
                     weui.topTips(data.errmsg);
                 }
-            },
-            complete: function() {
-                loading.hide();
             }
         });
     }
