--- a/m/my/info.html
+++ b/m/my/info.html
@@ -17,7 +17,7 @@
 
 <body>
     <div class="page page_show">
-        <div class="weui-cells__title" style="margin: 1em auto; text-align: center; font-size: 18px; color: #000;">个人信息</div>
+        <!-- <div class="weui-cells__title" style="margin: 1em auto; text-align: center; font-size: 18px; color: #000;">个人信息</div> -->
         <div class="weui-cells">
             <a class="weui-cell weui-cell_access" href="javascript:;" onclick="weui.page.show('#nickname-page')">
                 <div class="weui-cell__bd">
@@ -30,6 +30,12 @@
                     <p>手机</p>
                 </div>
                 <div class="weui-cell__ft"><span id="mobile"></span></div>
+            </div>
+            <div class="weui-cell" href="javascript:;">
+                <div class="weui-cell__bd">
+                    <p>机构</p>
+                </div>
+                <div class="weui-cell__ft"><span id="inst_name"></span></div>
             </div>
         </div>
     </div>
@@ -46,20 +52,50 @@
                 </div>
             </div>
             <div class="weui-btn-area btn-area">
-                <a id="back-btn" href="javascript:" class="weui-btn weui-btn_default" onclick="weui.page.back()">返回</a>
-                <a id="submit-btn" href="javascript:" class="weui-btn weui-btn_primary">保存</a>
+                <a href="javascript:" class="weui-btn weui-btn_default" onclick="weui.page.back()">返回</a>
+                <a id="nickname-submit-btn" href="javascript:" class="weui-btn weui-btn_primary">保存</a>
             </div>
         </form>
     </div>
     <script type="text/javascript" src="../js/lib/zepto.min.js"></script>
     <script type="text/javascript" src="../js/lib/weuijs/weuijs.min.js"></script>
     <script type="text/javascript">
-    $(function() {
+    function onNicknameSubmit() {
+        if (!weui.form.validate('#nickname-form', $$.rules)) return;
+        var param = $('#nickname-form').serializeObject();
+
+        $$.request('/action/user/update-nickname', param, {
+            success: function(data) {
+                if (data.errcode == 0) {
+                    weui.toast('操作成功', function() {
+                        onView();
+                        weui.page.back();
+                    });
+                } else {
+                    weui.alert(data.errmsg, {
+                        title: '提示'
+                    });
+                }
+            },
+            error: function() {}
+        });
+    }
+
+    function onView() {
         $$.request('/action/user/view', {}, function(data) {
             for (var name in data.data) {
                 $('#' + name).html(data.data[name]);
             }
+
+            weui.form.load('#nickname-form', data.data);
         });
+    }
+
+
+    $(function() {
+        $('#nickname-submit-btn').on('click', onNicknameSubmit);
+
+        onView();
     });
     </script>
 </body>
