--- a/m/busi/apply.html
+++ b/m/busi/apply.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>业务申请</title>
-    <link rel="stylesheet" href="../js/lib/weuijs/style/weuijs.css">
+    <link rel="stylesheet" href="../js/lib/weuijs/style/weuijs.min.css">
     <style type="text/css">
 		body {
 			background-color: #f8f8f8;
@@ -39,7 +39,7 @@
                         <label class="weui-label">手机号<span class="required">*</span></label>
                     </div>
                     <div class="weui-cell__bd">
-                        <input class="weui-input for_base" type="text" name="mobile" validType="mobile" invalidTips="请输入有效的手机号" placeholder="请输入手机号" required>
+                        <input class="weui-input for_base" type="number" name="mobile" validType="mobile" invalidTips="请输入有效的手机号" placeholder="请输入手机号" required>
                     </div>
                 </div>
                 <div class="weui-cell">
@@ -262,7 +262,7 @@
                             <label for="" class="weui-label">手续费</label>
                         </div>
                         <div class="weui-cell__bd">
-                            <input class="weui-input for_busi" name="fee" type="text" placeholder="请输入手续费千分比">
+                            <input class="weui-input for_busi" name="fee" type="number" placeholder="请输入手续费千分比">
                         </div>
                         <div class="weui-cell__ft">
                             <button class="weui-vcode-btn">‰</button>
@@ -314,7 +314,7 @@
                         <label class="weui-label">银行账号<span class="required">*</span></label>
                     </div>
                     <div class="weui-cell__bd">
-                        <input class="weui-input for_busi" name="account_no" required="" type="text" placeholder="请输入银行账号">
+                        <input class="weui-input for_busi" name="account_no" required="" type="number" placeholder="请输入银行账号">
                     </div>
                 </div>
                 <!--div class="weui-cell">
@@ -513,12 +513,11 @@
             </div>
         </div>
     </div>
-    <script type="text/javascript" src="../js/lib/zepto.js"></script>
-    <script type="text/javascript" src="../js/lib/weuijs/weuijs.js"></script>
+    <script type="text/javascript" src="../js/lib/zepto.min.js"></script>
+    <script type="text/javascript" src="../js/lib/weuijs/weuijs.min.js"></script>
     <script type="text/javascript" src="../js/district.js"></script>
     <script src="http://api.map.baidu.com/api?v=1.3" type="text/javascript"></script>
     <script type="text/javascript">
-		
 	var getLocation = function (successFunc, errorFunc) { 
 		if (navigator.geolocation) {
 			navigator.geolocation.getCurrentPosition(function (position) {
@@ -705,7 +704,7 @@
 	
 	function Uploader(target, options) {
 		options = options || {};
-		var url = options.url || '/action/upload';
+		var url = options.url? $$.wrapUrl(options.url):$$.wrapUrl('/action/upload');
 		var max_size = options.max_size || 10;
 		var max = options.max || 1;
 		options = $.extend({
