--- a/m/register.html
+++ b/m/register.html
@@ -39,7 +39,7 @@
                     <img class="weui-vcode-img" src="/p/m/action/user/vcode" onclick="this.src='/p/m/action/user/vcode?t='+new Date().getTime()">
                 </div>
             </div>
-            <div class="weui-cell weui-cell_vcode">
+            <!-- <div class="weui-cell weui-cell_vcode">
                 <div class="weui-cell__hd">
                     <label class="weui-label">短信验证码</label>
                 </div>
@@ -49,7 +49,7 @@
                 <div class="weui-cell__ft">
                     <button class="weui-vcode-btn" type="button" style="width: 6.35em; padding: 0;" id="mobilecode-btn">获取验证码</button>
                 </div>
-            </div>
+            </div> -->
             <div class="weui-cell">
                 <div class="weui-cell__hd">
                     <label class="weui-label">登录密码</label>
@@ -123,7 +123,9 @@
                 console.log(arguments);
 
                 if (data.errcode == 0) {
-                    weui.toast('注册成功');
+                    weui.toast('注册成功', function () {
+                        window.location.href = $$.wrapUrl('/m/login.html');
+                    });
                 } else {
                     weui.topTips(data.errmsg);
                 }
