影印件修改

--- a/m/busi/term-param.html
+++ b/m/busi/term-param.html
@@ -7,29 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>终端参数</title>
     <link rel="stylesheet" href="../js/lib/weuijs/style/weuijs.css">
+    <link rel="stylesheet" href="../css/ui-base.css">
     <style type="text/css">
-    .hide {
-        display: none;
-    }
-
-    .required {
-        color: red;
-    }
-
-    .weui-cells {
-        /*font-size: 16px;*/
-    }
-    
-    .weui-cell__bd {
-        position: relative;
-    }
     </style>
 </head>
 
 <body>
     <div id="search-page" class="page page_show">
         <div class="weui-search-bar">
-            <a id="add-btn" href="javascript:" class="search-bar__btn">新增</a>
+            <a id="add-btn" href="javascript:" class="search-bar__btn hide">新增</a>
             <form class="weui-search-bar__form" method="post" action="">
                 <div class="weui-search-bar__box">
                     <i class="weui-icon-search"></i>
@@ -216,7 +202,7 @@
 
     function onSearch(param, success, error) {
         var queryParams = $.extend(param, query);
-        $$.request('/action/bm/term-param/search', param, {
+        $$.request('/action/bm/term-param/search', queryParams, {
             success: function(data) {
                 if (data.errcode == 0) {
                     success(data.rows);
@@ -374,7 +360,9 @@
     }
 
     $(function() {
-        $('#add-btn').on('click', onClickAdd);
+        if(query.term_no) {
+            $('#add-btn').removeClass('hide').on('click', onClickAdd);
+        }
         $('#submit-btn').on('click', onSubmit);
 
         //init component
