--- a/admin/index.html
+++ b/admin/index.html
@@ -73,7 +73,7 @@
                     </td>
                     <td>
                         <input name="captcha" class="easyui-validatebox" style="padding: 5px; width: 100px;" data-options="required:true" />
-                        <img id="captcha-img" src="javascript:void(0)" onclick="this.src='/action/user/captcha?t='+new Date().getTime()" style="width:100px; height:35px; vertical-align:middle;" />
+                        <img id="captcha-img" src="javascript:void(0)" onclick="this.src='/p/action/user/captcha?t='+new Date().getTime()" style="width:100px; height:35px; vertical-align:middle;" />
                     </td>
                 </tr>
                 <tfoot>
