--- a/m/busi/mchnt-elec-info.html
+++ b/m/busi/mchnt-elec-info.html
@@ -300,7 +300,7 @@
     }
 
     function onClickAdd() {
-        operateType = 'create';
+        operateType = 'batch-create';
         weui.page.show('#detail-page');
         weui.form.clear('#form');
         weui.form.load('#form', {
